# wikisearch

./: README.md  app.py  pyproject.toml  requirements.txt  wikipedia.py
