[tool.poetry]
name = "wise"
version = "0.1.0"
description = "Wikipedia Semantic Search Engine"
authors = ["https://github.com/dcarpintero"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
